tests/codegen/pass/003-div.hyg
assert(40 / 10 = 4);
assert(3.14f / 1.0f = 3.14f)