tests/codegen/fail/007-large.hyg
assert( 2 > 4);
assert( 0 > 3);
assert(1.0f > 3.14f)